--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
                 <h1>NITROX</h1>
                 <p class="description">optimizing caffeine</p>
                 <div class="explore-dark">
-                    <a href="gallery.html" rel="noopener noreferrer" class="hover-blue explore-text-dark fashion-port">see more</a>
+                    <a href="https://medium.com/@sarah.crevillen/nitrox-optimizing-caffeine-870cacbf56f5" rel="noopener noreferrer" target="_blank" class="hover-blue explore-text-dark fashion-port">see more</a>
                 </div>
             </div>
 
@@ -45,7 +45,7 @@
                 <h1>SCOPE</h1>
                 <p class="description">detecting deepfake</p>
                 <div class="explore-dark">
-                    <a href="gallery.html" rel="noopener noreferrer" class="hover-blue explore-text-dark fashion-port">see more</a>
+                    <a href="https://medium.com/@sarah.crevillen/scope-deepfake-detection-app-4ffb8b2ef532" rel="noopener noreferrer" target="_blank" class="hover-blue explore-text-dark fashion-port">see more</a>
                 </div>
             </div>
         </div>
